--- a/src/frontends/android/app/src/main/res/menu/profile_edit.xml
+++ b/src/frontends/android/app/src/main/res/menu/profile_edit.xml
@@ -16,14 +16,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/menu_accept"
-        android:title="@string/profile_edit_save"
-        app:showAsAction="always|withText" />
+<!--    <item-->
+<!--        android:id="@+id/menu_accept"-->
+<!--        android:title="@string/profile_edit_save"-->
+<!--        app:showAsAction="always|withText" />-->
 
-    <item
-        android:id="@+id/menu_cancel"
-        android:title="@string/profile_edit_cancel"
-        app:showAsAction="ifRoom" />
+<!--    <item-->
+<!--        android:id="@+id/menu_cancel"-->
+<!--        android:title="@string/profile_edit_cancel"-->
+<!--        app:showAsAction="ifRoom" />-->
 
 </menu>
