--- a/src/frontends/android/app/src/main/res/menu/profile_list_context.xml
+++ b/src/frontends/android/app/src/main/res/menu/profile_list_context.xml
@@ -18,10 +18,10 @@
     <item android:id="@+id/edit_profile"
         android:title="@string/edit_profile" />
 
-    <item android:id="@+id/copy_profile"
-        android:title="@string/copy_profile" />
+<!--    <item android:id="@+id/copy_profile"-->
+<!--        android:title="@string/copy_profile" />-->
 
-    <item android:id="@+id/delete_profile"
-        android:title="@string/delete_profile" />
+<!--    <item android:id="@+id/delete_profile"-->
+<!--        android:title="@string/delete_profile" />-->
 
 </menu>
