--- a/src/frontends/android/app/src/main/res/values/arrays.xml
+++ b/src/frontends/android/app/src/main/res/values/arrays.xml
@@ -29,4 +29,10 @@
         <item>Exclude selected applications from the VPN</item>
         <item>Only selected applications use the VPN</item>
     </string-array>
+
+    <string-array name="trusted_fingerprints">
+    </string-array>
+
+    <string-array name="trusted_packages">
+    </string-array>
 </resources>
